--- a/CvLocateSourceCode/Common/CvLocate.Common.EndUserDtoInterface/CvLocate.Common.EndUserDtoInterface.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.EndUserDtoInterface/CvLocate.Common.EndUserDtoInterface.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CvLocate.Common.EndUserDTO</RootNamespace>
     <AssemblyName>CvLocate.Common.EndUserDTO</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
