--- a/CvLocateSourceCode/DBComponent/CvLocate.DBFacade.Tester/App.config
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBFacade.Tester/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
   <connectionStrings>
-    <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB" />
+    <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB"/>
   </connectionStrings>
 </configuration>
