--- a/CvLocateSourceCode/DBComponent/CvLocate.MongoDB/app.config
+++ b/CvLocateSourceCode/DBComponent/CvLocate.MongoDB/app.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
     <!-- See http://www.mongodb.org/display/DOCS/CSharp+Driver+Tutorial#CSharpDriverTutorial-Connectionstrings for more info -->
-    <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB" />
+    <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
