--- a/CvLocateSourceCode/EmailServer/CvLocate.EmailListener.Tester/App.config
+++ b/CvLocateSourceCode/EmailServer/CvLocate.EmailListener.Tester/App.config
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
@@ -18,8 +18,8 @@
       </layout>-->
     </appender>
     <logger name="defaultLogger">
-      <level value="ALL" />
-      <appender-ref ref="FileAppender" />
+      <level value="ALL"/>
+      <appender-ref ref="FileAppender"/>
     </logger>
 
   </log4net>
