--- a/CvLocateSourceCode/EmailServer/CvLocate.EmailListener/CvLocate.EmailListener.csproj
+++ b/CvLocateSourceCode/EmailServer/CvLocate.EmailListener/CvLocate.EmailListener.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CvLocate.EmailListener</RootNamespace>
     <AssemblyName>CvLocate.EmailListener</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
