--- a/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
+++ b/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A61C0EEC-1343-4FBF-BB95-6B87DEB5A807}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{10D95134-B1FD-4736-89F2-2CB84D5B92D6}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.DBFacade</RootNamespace>
-    <AssemblyName>CvLocate.DBFacade</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>CvLocate.ParsingEngine.Tester</RootNamespace>
+    <AssemblyName>CvLocate.ParsingEngine.Tester</AssemblyName>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,30 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserDBFacade.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
-      <Project>{7e682acb-3652-4537-a375-f7dee4cf8446}</Project>
-      <Name>CvLocate.Common.CommonDto</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
-      <Project>{53337976-55e2-42fd-bcf1-2d743907aefc}</Project>
-      <Name>CvLocate.Common.DbFacadeInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.EndUserDtoInterface\CvLocate.Common.EndUserDtoInterface.csproj">
-      <Project>{ca6983f7-af69-4473-8712-4ba2ddd23de8}</Project>
-      <Name>CvLocate.Common.EndUserDtoInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CvLocate.DbInterface\CvLocate.DbInterface.csproj">
-      <Project>{32cc8542-a2ab-4031-8c1b-8c0eec64d9bb}</Project>
-      <Name>CvLocate.DbInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CvLocate.MongoDB\CvLocate.MongoDB.csproj">
-      <Project>{d70757bf-23d5-472b-8cfc-b4fe76468c8e}</Project>
-      <Name>CvLocate.MongoDB</Name>
-    </ProjectReference>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
