--- a/CvLocateSourceCode/Common/CvLocate.Common.CoreDtoInterface/CvLocate.Common.CoreDtoInterface.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.CoreDtoInterface/CvLocate.Common.CoreDtoInterface.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CvLocate.Common.CoreDtoInterface</RootNamespace>
     <AssemblyName>CvLocate.Common.CoreDtoInterface</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -39,9 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\BaseCommonCommand.cs" />
     <Compile Include="DTO\Candidate.cs" />
     <Compile Include="DTO\CvFile.cs" />
+    <Compile Include="DTO\ParsingEngineConfiguration.cs" />
+    <Compile Include="Enums\FindCandidateBy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Command\SaveResultOfCandidateParsingCommand.cs" />
+    <Compile Include="Query\BaseCommonQuery.cs" />
+    <Compile Include="Query\FindCandidateQuery.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
