--- a/CvLocateSourceCode/Common/CvLocate.Common.EmailServerDtoInterface/CvLocate.Common.EmailServerDtoInterface.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.EmailServerDtoInterface/CvLocate.Common.EmailServerDtoInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7E682ACB-3652-4537-A375-F7DEE4CF8446}</ProjectGuid>
+    <ProjectGuid>{EB0DFFA1-2A1B-4C12-AA90-48D6AF802CC3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.Common.CommonDto</RootNamespace>
-    <AssemblyName>CvLocate.Common.CommonDto</AssemblyName>
+    <RootNamespace>CvLocate.Common.EmailServerDtoInterface</RootNamespace>
+    <AssemblyName>CvLocate.Common.EmailServerDtoInterface</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -40,25 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\CandidateRegisterStatus.cs" />
-    <Compile Include="Enums\CandidateSearchJobStatus.cs" />
-    <Compile Include="Enums\CandidateSourceType.cs" />
-    <Compile Include="Enums\CvFileStatus.cs" />
-    <Compile Include="Enums\ParsingProcessStatus.cs" />
-    <Compile Include="Enums\Gender.cs" />
-    <Compile Include="Enums\JobSourceType.cs" />
-    <Compile Include="Enums\JobState.cs" />
-    <Compile Include="Enums\JobStatus.cs" />
-    <Compile Include="Enums\MatchingProcessStatus.cs" />
-    <Compile Include="Enums\MatchingState.cs" />
-    <Compile Include="Enums\RecruiterMatchingStatus.cs" />
-    <Compile Include="Enums\RecruiterRegisterStatus.cs" />
-    <Compile Include="Enums\RecruiterSourceType.cs" />
-    <Compile Include="Enums\UserStatus.cs" />
-    <Compile Include="Enums\UserType.cs" />
-    <Compile Include="Enums\CvStatusReason.cs" />
+    <Compile Include="Command\BaseEmailServerCommand.cs" />
+    <Compile Include="Command\UploadCvFileCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Results\BaseInsertResult.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
+      <Project>{7e682acb-3652-4537-a375-f7dee4cf8446}</Project>
+      <Name>CvLocate.Common.CommonDto</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
