--- a/CvLocateSourceCode/Common/CvLocate.Common/CvLocate.Common.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common/CvLocate.Common.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Logging\CvLocateLogger.cs" />
     <Compile Include="Logging\ICvLocateLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Extentions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
