--- a/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
+++ b/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CheviTester.cs" />
+    <Compile Include="MockCoreDBFacade.cs" />
+    <Compile Include="MockCvParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ZvikaTester.cs" />
@@ -63,9 +65,17 @@
       <Project>{468ec8fd-37ae-427f-b7e7-6e6b9d00bb3e}</Project>
       <Name>CvLocate.Common.CoreDtoInterface</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
+      <Project>{53337976-55e2-42fd-bcf1-2d743907aefc}</Project>
+      <Name>CvLocate.Common.DbFacadeInterface</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\Common\CvLocate.Common\CvLocate.Common.csproj">
       <Project>{9a6ffa4d-0b4b-494e-ad8f-c2d3647ea96e}</Project>
       <Name>CvLocate.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\DBComponent\CvLocate.DBFacade\CvLocate.DBFacade.csproj">
+      <Project>{a61c0eec-1343-4fbf-bb95-6b87deb5a807}</Project>
+      <Name>CvLocate.DBFacade</Name>
     </ProjectReference>
     <ProjectReference Include="..\CvLocate.ParsingEngine\CvLocate.ParsingEngine.csproj">
       <Project>{6960007d-dec5-46d9-a45d-64cad85d3b67}</Project>
