--- a/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
+++ b/CvLocateSourceCode/Core/ParsingEngine/CvLocate.ParsingEngine.Tester/CvLocate.ParsingEngine.Tester.csproj
@@ -53,7 +53,9 @@
     <Compile Include="ZvikaTester.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="CvFileExample.doc" />
   </ItemGroup>
   <ItemGroup>
