--- a/CvLocateSourceCode/Common/CvLocate.Common.CommonDto/CvLocate.Common.CommonDto.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.CommonDto/CvLocate.Common.CommonDto.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Enums\CandidateSearchJobStatus.cs" />
     <Compile Include="Enums\CandidateSourceType.cs" />
     <Compile Include="Enums\CvFileStatus.cs" />
+    <Compile Include="Enums\FileType.cs" />
     <Compile Include="Enums\ParsingProcessStatus.cs" />
     <Compile Include="Enums\Gender.cs" />
     <Compile Include="Enums\JobSourceType.cs" />
