--- a/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner.Tester/CvLocate.CvFilesScanner.Tester.csproj
+++ b/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner.Tester/CvLocate.CvFilesScanner.Tester.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A6FFA4D-0B4B-494E-AD8F-C2D3647EA96E}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{8F153445-E34D-4900-AA37-C447C6E26119}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.Common</RootNamespace>
-    <AssemblyName>CvLocate.Common</AssemblyName>
+    <RootNamespace>CvLocate.CvFilesScanner.Tester</RootNamespace>
+    <AssemblyName>CvLocate.CvFilesScanner.Tester</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,18 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Logging\CvLocateLogger.cs" />
-    <Compile Include="Logging\ICvLocateLogger.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Extentions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
-      <Project>{7e682acb-3652-4537-a375-f7dee4cf8446}</Project>
-      <Name>CvLocate.Common.CommonDto</Name>
+    <ProjectReference Include="..\CvLocate.CvFilesScanner\CvLocate.CvFilesScanner.csproj">
+      <Project>{8348c585-9be3-47aa-8a57-722cf940535a}</Project>
+      <Name>CvLocate.CvFilesScanner</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
