--- a/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner/CvLocate.CvFilesScanner.csproj
+++ b/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner/CvLocate.CvFilesScanner.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9A6FFA4D-0B4B-494E-AD8F-C2D3647EA96E}</ProjectGuid>
+    <ProjectGuid>{8348C585-9BE3-47AA-8A57-722CF940535A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.Common</RootNamespace>
-    <AssemblyName>CvLocate.Common</AssemblyName>
+    <RootNamespace>CvLocate.CvFilesScanner</RootNamespace>
+    <AssemblyName>CvLocate.CvFilesScanner</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,19 +40,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Logging\CvLocateLogger.cs" />
-    <Compile Include="Logging\ICvLocateLogger.cs" />
+    <Compile Include="CvFileScanner.cs" />
+    <Compile Include="CvFilesListener.cs" />
+    <Compile Include="CvFilesScannerManager.cs" />
+    <Compile Include="DocumentConverterFactory.cs" />
+    <Compile Include="Entities\FileCreatedEventArgs.cs" />
+    <Compile Include="Entities\ScanResult.cs" />
+    <Compile Include="Interfaces\ICvFileScanner.cs" />
+    <Compile Include="Interfaces\ICvFilesScannerManager.cs" />
+    <Compile Include="Interfaces\ICvFilesFilesListener.cs" />
+    <Compile Include="Interfaces\IDocumentConverterFactory.cs" />
+    <Compile Include="Interfaces\IScannerDataWrapper.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="ScannerDataWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Extentions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
+    <ProjectReference Include="..\..\Common\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
       <Project>{7e682acb-3652-4537-a375-f7dee4cf8446}</Project>
       <Name>CvLocate.Common.CommonDto</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Common\CvLocate.Common\CvLocate.Common.csproj">
+      <Project>{9a6ffa4d-0b4b-494e-ad8f-c2d3647ea96e}</Project>
+      <Name>CvLocate.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\DocumentConverter\DocumentConverter.csproj">
+      <Project>{021ed6ee-40f4-4562-925d-092874bf29e9}</Project>
+      <Name>DocumentConverter</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
