--- a/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DbInterface/CvLocate.DBComponent.DbInterface.csproj
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DbInterface/CvLocate.DBComponent.DbInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9BC2DC60-7247-470A-AE7A-42EA89126445}</ProjectGuid>
+    <ProjectGuid>{32CC8542-A2AB-4031-8C1B-8C0EEC64D9BB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.Core</RootNamespace>
-    <AssemblyName>CvLocate.Core</AssemblyName>
+    <RootNamespace>CvLocate.DBComponent.DbInterface</RootNamespace>
+    <AssemblyName>CvLocate.DBComponent.DbInterface</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -40,25 +40,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bootstrapper.cs" />
+    <Compile Include="ICandidateManager.cs" />
+    <Compile Include="ICvFilesManager.cs" />
+    <Compile Include="IJobManager.cs" />
+    <Compile Include="IRecruiterManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
-      <Project>{53337976-55e2-42fd-bcf1-2d743907aefc}</Project>
-      <Name>CvLocate.Common.DbFacadeInterface</Name>
+    <ProjectReference Include="..\..\Common\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
+      <Project>{7e682acb-3652-4537-a375-f7dee4cf8446}</Project>
+      <Name>CvLocate.Common.CommonDto</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common\CvLocate.Common.csproj">
-      <Project>{9a6ffa4d-0b4b-494e-ad8f-c2d3647ea96e}</Project>
-      <Name>CvLocate.Common</Name>
+    <ProjectReference Include="..\..\Common\CvLocate.Common.CoreDtoInterface\CvLocate.Common.CoreDtoInterface.csproj">
+      <Project>{468ec8fd-37ae-427f-b7e7-6e6b9d00bb3e}</Project>
+      <Name>CvLocate.Common.CoreDtoInterface</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\DBComponent\DBFacades\CcLocate.DBComponent.CoreDBFacade\CcLocate.DBComponent.CoreDBFacade.csproj">
-      <Project>{a93301e7-482e-46de-bd2e-5e77fd0c8b4d}</Project>
-      <Name>CcLocate.DBComponent.CoreDBFacade</Name>
+    <ProjectReference Include="..\..\Common\CvLocate.Common.EmailServerDtoInterface\CvLocate.Common.EmailServerDtoInterface.csproj">
+      <Project>{eb0dffa1-2a1b-4c12-aa90-48d6af802cc3}</Project>
+      <Name>CvLocate.Common.EmailServerDtoInterface</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ParsingEngine\CvLocate.ParsingEngine\CvLocate.ParsingEngine.csproj">
-      <Project>{6960007d-dec5-46d9-a45d-64cad85d3b67}</Project>
-      <Name>CvLocate.ParsingEngine</Name>
+    <ProjectReference Include="..\..\Common\CvLocate.Common.EndUserDtoInterface\CvLocate.Common.EndUserDtoInterface.csproj">
+      <Project>{ca6983f7-af69-4473-8712-4ba2ddd23de8}</Project>
+      <Name>CvLocate.Common.EndUserDtoInterface</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
