--- a/CvLocateSourceCode/DBComponent/DBFacades/CcLocate.DBComponent.CoreDBFacade/CcLocate.DBComponent.CoreDBFacade.csproj
+++ b/CvLocateSourceCode/DBComponent/DBFacades/CcLocate.DBComponent.CoreDBFacade/CcLocate.DBComponent.CoreDBFacade.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9BC2DC60-7247-470A-AE7A-42EA89126445}</ProjectGuid>
+    <ProjectGuid>{A93301E7-482E-46DE-BD2E-5E77FD0C8B4D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.Core</RootNamespace>
-    <AssemblyName>CvLocate.Core</AssemblyName>
+    <RootNamespace>CcLocate.DBComponent.CoreDBFacade</RootNamespace>
+    <AssemblyName>CcLocate.DBComponent.CoreDBFacade</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -40,25 +40,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bootstrapper.cs" />
+    <Compile Include="CoreDBFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
+    <ProjectReference Include="..\..\..\Common\CvLocate.Common.CoreDtoInterface\CvLocate.Common.CoreDtoInterface.csproj">
+      <Project>{468ec8fd-37ae-427f-b7e7-6e6b9d00bb3e}</Project>
+      <Name>CvLocate.Common.CoreDtoInterface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
       <Project>{53337976-55e2-42fd-bcf1-2d743907aefc}</Project>
       <Name>CvLocate.Common.DbFacadeInterface</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common\CvLocate.Common.csproj">
+    <ProjectReference Include="..\..\..\Common\CvLocate.Common\CvLocate.Common.csproj">
       <Project>{9a6ffa4d-0b4b-494e-ad8f-c2d3647ea96e}</Project>
       <Name>CvLocate.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DBComponent\DBFacades\CcLocate.DBComponent.CoreDBFacade\CcLocate.DBComponent.CoreDBFacade.csproj">
-      <Project>{a93301e7-482e-46de-bd2e-5e77fd0c8b4d}</Project>
-      <Name>CcLocate.DBComponent.CoreDBFacade</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ParsingEngine\CvLocate.ParsingEngine\CvLocate.ParsingEngine.csproj">
-      <Project>{6960007d-dec5-46d9-a45d-64cad85d3b67}</Project>
-      <Name>CvLocate.ParsingEngine</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
