--- a/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EndUserDBFacade/CvLocate.DBComponent.EndUserDBFacade.csproj
+++ b/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EndUserDBFacade/CvLocate.DBComponent.EndUserDBFacade.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9BC2DC60-7247-470A-AE7A-42EA89126445}</ProjectGuid>
+    <ProjectGuid>{9530F7AE-EA42-41A2-AD5D-5F043E9910D3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.Core</RootNamespace>
-    <AssemblyName>CvLocate.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>CvLocate.DBComponent.EndUserDBFacade</RootNamespace>
+    <AssemblyName>CvLocate.DBComponent.EndUserDBFacade</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,26 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bootstrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
-      <Project>{53337976-55e2-42fd-bcf1-2d743907aefc}</Project>
-      <Name>CvLocate.Common.DbFacadeInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common\CvLocate.Common.csproj">
-      <Project>{9a6ffa4d-0b4b-494e-ad8f-c2d3647ea96e}</Project>
-      <Name>CvLocate.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\DBComponent\DBFacades\CcLocate.DBComponent.CoreDBFacade\CcLocate.DBComponent.CoreDBFacade.csproj">
-      <Project>{a93301e7-482e-46de-bd2e-5e77fd0c8b4d}</Project>
-      <Name>CcLocate.DBComponent.CoreDBFacade</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ParsingEngine\CvLocate.ParsingEngine\CvLocate.ParsingEngine.csproj">
-      <Project>{6960007d-dec5-46d9-a45d-64cad85d3b67}</Project>
-      <Name>CvLocate.ParsingEngine</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
