--- a/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DBFacade.Tester/App.config
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DBFacade.Tester/App.config
@@ -5,5 +5,6 @@
     </startup>
   <connectionStrings>
     <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB"/>
+    <add name="MongoCvFilesDBSettings" connectionString="mongodb://localhost/CvFilesDB"/>
   </connectionStrings>
 </configuration>
