--- a/CvLocateSourceCode/Common/CvLocate.Common.CvFilesScannerDtoInterface/CvLocate.Common.CvFilesScannerDtoInterface.csproj
+++ b/CvLocateSourceCode/Common/CvLocate.Common.CvFilesScannerDtoInterface/CvLocate.Common.CvFilesScannerDtoInterface.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{53337976-55E2-42FD-BCF1-2D743907AEFC}</ProjectGuid>
+    <ProjectGuid>{3263B227-652B-439C-BA95-4B3FEF0D4BB1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.Common.DbFacadeInterface</RootNamespace>
-    <AssemblyName>CvLocate.Common.DbFacadeInterface</AssemblyName>
+    <RootNamespace>CvLocate.Common.CvFilesScannerDtoInterface</RootNamespace>
+    <AssemblyName>CvLocate.Common.CvFilesScannerDtoInterface</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -40,33 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICvFilesScannerDBFacade.cs" />
-    <Compile Include="IEmailServerDBFacade.cs" />
-    <Compile Include="ICoreDBFacade.cs" />
-    <Compile Include="IRecruiterDBFacade.cs" />
-    <Compile Include="IUserDBFacade.cs" />
+    <Compile Include="Command\BaseCommand.cs" />
+    <Compile Include="Command\DeleteScannedCvFileCommand.cs" />
+    <Compile Include="Command\UploadScannedCvFileCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Result\BaseResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
       <Project>{7e682acb-3652-4537-a375-f7dee4cf8446}</Project>
       <Name>CvLocate.Common.CommonDto</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CvLocate.Common.CoreDtoInterface\CvLocate.Common.CoreDtoInterface.csproj">
-      <Project>{468ec8fd-37ae-427f-b7e7-6e6b9d00bb3e}</Project>
-      <Name>CvLocate.Common.CoreDtoInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CvLocate.Common.CvFilesScannerDtoInterface\CvLocate.Common.CvFilesScannerDtoInterface.csproj">
-      <Project>{3263b227-652b-439c-ba95-4b3fef0d4bb1}</Project>
-      <Name>CvLocate.Common.CvFilesScannerDtoInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CvLocate.Common.EmailServerDtoInterface\CvLocate.Common.EmailServerDtoInterface.csproj">
-      <Project>{eb0dffa1-2a1b-4c12-aa90-48d6af802cc3}</Project>
-      <Name>CvLocate.Common.EmailServerDtoInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CvLocate.Common.EndUserDtoInterface\CvLocate.Common.EndUserDtoInterface.csproj">
-      <Project>{ca6983f7-af69-4473-8712-4ba2ddd23de8}</Project>
-      <Name>CvLocate.Common.EndUserDtoInterface</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
