--- a/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.MongoDB/CvLocate.DBComponent.MongoDB.csproj
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.MongoDB/CvLocate.DBComponent.MongoDB.csproj
@@ -57,11 +57,13 @@
     <Compile Include="Entities\BaseMongoEntity.cs" />
     <Compile Include="Entities\CandidateEntity.cs" />
     <Compile Include="Entities\CvFileEntity.cs" />
+    <Compile Include="Entities\FileEntity.cs" />
     <Compile Include="Entities\JobEntity.cs" />
     <Compile Include="Entities\RecruiterEntity.cs" />
     <Compile Include="Extensions\RepositoryExtensions.cs" />
     <Compile Include="Managers\CandidateManager.cs" />
     <Compile Include="Managers\CvFilesManager.cs" />
+    <Compile Include="Managers\FilesManager.cs" />
     <Compile Include="Managers\JobManager.cs" />
     <Compile Include="Managers\RecruiterManager.cs" />
     <Compile Include="Extensions\MongoExtensions.cs" />
@@ -72,7 +74,9 @@
     <None Include="..\packages\MongoRepository.1.6.10\MongoRepository.chm">
       <Link>Documentation\MongoRepository.chm</Link>
     </None>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +87,10 @@
     <ProjectReference Include="..\..\Common\CvLocate.Common.CoreDtoInterface\CvLocate.Common.CoreDtoInterface.csproj">
       <Project>{468ec8fd-37ae-427f-b7e7-6e6b9d00bb3e}</Project>
       <Name>CvLocate.Common.CoreDtoInterface</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\CvLocate.Common.CvFilesScannerDtoInterface\CvLocate.Common.CvFilesScannerDtoInterface.csproj">
+      <Project>{3263b227-652b-439c-ba95-4b3fef0d4bb1}</Project>
+      <Name>CvLocate.Common.CvFilesScannerDtoInterface</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Common\CvLocate.Common.EmailServerDtoInterface\CvLocate.Common.EmailServerDtoInterface.csproj">
       <Project>{eb0dffa1-2a1b-4c12-aa90-48d6af802cc3}</Project>
