--- a/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.MongoDB/app.config
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.MongoDB/app.config
@@ -3,5 +3,6 @@
   <connectionStrings>
     <!-- See http://www.mongodb.org/display/DOCS/CSharp+Driver+Tutorial#CSharpDriverTutorial-Connectionstrings for more info -->
     <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB"/>
+    <add name="MongoCvFilesDBSettings" connectionString="mongodb://localhost/CvFilesDB"/>
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
