--- a/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EmailDBFacade/CvLocate.DBComponent.EmailServerDBFacade.csproj
+++ b/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EmailDBFacade/CvLocate.DBComponent.EmailServerDBFacade.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A61C0EEC-1343-4FBF-BB95-6B87DEB5A807}</ProjectGuid>
+    <ProjectGuid>{704271A6-CBA7-4952-9AB9-0584BF8AEB1B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CvLocate.DBComponent.DBFacade</RootNamespace>
-    <AssemblyName>CvLocate.DBComponent.DBFacade</AssemblyName>
+    <RootNamespace>CvLocate.DBComponent.EmailServerDBFacade</RootNamespace>
+    <AssemblyName>CvLocate.DBComponent.EmailServerDBFacade</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -40,46 +40,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmailServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RecruiterDBFacade.cs" />
-    <Compile Include="UserDBFacade.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
+    <ProjectReference Include="..\..\..\Common\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
       <Project>{7e682acb-3652-4537-a375-f7dee4cf8446}</Project>
       <Name>CvLocate.Common.CommonDto</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.CoreDtoInterface\CvLocate.Common.CoreDtoInterface.csproj">
-      <Project>{468ec8fd-37ae-427f-b7e7-6e6b9d00bb3e}</Project>
-      <Name>CvLocate.Common.CoreDtoInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
+    <ProjectReference Include="..\..\..\Common\CvLocate.Common.DbFacadeInterface\CvLocate.Common.DbFacadeInterface.csproj">
       <Project>{53337976-55e2-42fd-bcf1-2d743907aefc}</Project>
       <Name>CvLocate.Common.DbFacadeInterface</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.EmailServerDtoInterface\CvLocate.Common.EmailServerDtoInterface.csproj">
+    <ProjectReference Include="..\..\..\Common\CvLocate.Common.EmailServerDtoInterface\CvLocate.Common.EmailServerDtoInterface.csproj">
       <Project>{eb0dffa1-2a1b-4c12-aa90-48d6af802cc3}</Project>
       <Name>CvLocate.Common.EmailServerDtoInterface</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common.EndUserDtoInterface\CvLocate.Common.EndUserDtoInterface.csproj">
-      <Project>{ca6983f7-af69-4473-8712-4ba2ddd23de8}</Project>
-      <Name>CvLocate.Common.EndUserDtoInterface</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Common\CvLocate.Common\CvLocate.Common.csproj">
-      <Project>{9a6ffa4d-0b4b-494e-ad8f-c2d3647ea96e}</Project>
-      <Name>CvLocate.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CvLocate.DBComponent.DbInterface\CvLocate.DBComponent.DbInterface.csproj">
+    <ProjectReference Include="..\..\CvLocate.DBComponent.DbInterface\CvLocate.DBComponent.DbInterface.csproj">
       <Project>{32cc8542-a2ab-4031-8c1b-8c0eec64d9bb}</Project>
       <Name>CvLocate.DBComponent.DbInterface</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CvLocate.DBComponent.MongoDB\CvLocate.DBComponent.MongoDB.csproj">
+    <ProjectReference Include="..\..\CvLocate.DBComponent.MongoDB\CvLocate.DBComponent.MongoDB.csproj">
       <Project>{d70757bf-23d5-472b-8cfc-b4fe76468c8e}</Project>
       <Name>CvLocate.DBComponent.MongoDB</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DBFacades\CvLocate.DBComponent.FilesDBFacade\CvLocate.DBComponent.FilesDBFacade.csproj">
-      <Project>{859f0983-9d4c-4fbf-998c-ff8743bda69b}</Project>
-      <Name>CvLocate.DBComponent.FilesDBFacade</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
