Add changes of new facades

--- a/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DbInterface/CvLocate.DBComponent.DbInterface.csproj
+++ b/CvLocateSourceCode/DBComponent/CvLocate.DBComponent.DbInterface/CvLocate.DBComponent.DbInterface.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions\MongoEntityNotFoundException.cs" />
+    <Compile Include="Exceptions\RequiredFieldsNullOrEmptyExcepstion.cs" />
     <Compile Include="ICandidateManager.cs" />
     <Compile Include="ICvFilesManager.cs" />
     <Compile Include="IFilesManager.cs" />
