--- a/CvLocateSourceCode/DBComponent/DBFacades/CcLocate.DBComponent.CoreDBFacade/CvLocate.DBComponent.CoreDBFacade.csproj
+++ b/CvLocateSourceCode/DBComponent/DBFacades/CcLocate.DBComponent.CoreDBFacade/CvLocate.DBComponent.CoreDBFacade.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A93301E7-482E-46DE-BD2E-5E77FD0C8B4D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CcLocate.DBComponent.CoreDBFacade</RootNamespace>
-    <AssemblyName>CcLocate.DBComponent.CoreDBFacade</AssemblyName>
+    <RootNamespace>CvLocate.DBComponent.CoreDBFacade</RootNamespace>
+    <AssemblyName>CvLocate.DBComponent.CoreDBFacade</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
