--- a/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EmailDBFacade/CvLocate.DBComponent.EmailServerDBFacade.csproj
+++ b/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EmailDBFacade/CvLocate.DBComponent.EmailServerDBFacade.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EmailServer.cs" />
+    <Compile Include="EmailServerDBFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
