--- a/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EndUserDBFacade/CvLocate.DBComponent.EndUserDBFacade.csproj
+++ b/CvLocateSourceCode/DBComponent/DBFacades/CvLocate.DBComponent.EndUserDBFacade/CvLocate.DBComponent.EndUserDBFacade.csproj
@@ -41,8 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Recruiters.cs" />
-    <Compile Include="Users.cs" />
+    <Compile Include="RecruiterDBFacade.cs" />
+    <Compile Include="UserDBFacade.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\CvLocate.Common.CommonDto\CvLocate.Common.CommonDto.csproj">
