--- a/CvLocateSourceCode/packages/repositories.config
+++ b/CvLocateSourceCode/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Common\CvLocate.Common\packages.config" />
+  <repository path="..\Common\DocumentConverter\packages.config" />
   <repository path="..\CvLocate.Common\packages.config" />
   <repository path="..\CvLocate.DBFacade.MongoInfractures\packages.config" />
   <repository path="..\CvLocate.EmailListener.Tester\packages.config" />
