--- a/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner.Tester/App.config
+++ b/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner.Tester/App.config
@@ -1,6 +1,93 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
-    </startup>
+
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="CvLocate.CvFilesScanner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+
+  <connectionStrings>
+    <add name="MongoServerSettings" connectionString="mongodb://localhost/CvLocateDB"/>
+    <add name="MongoCvFilesDBSettings" connectionString="mongodb://localhost/CvFilesDB"/>
+  </connectionStrings>
+
+
+  <log4net>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%date (%logger) [%5level] - %message"/>
+      </layout>
+    </appender>
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file type="log4net.Util.PatternString" value=".\Logs\CvLocate-log.xml"/>
+      <appendToFile value="true"/>
+      <layout type="log4net.Layout.XmlLayoutSchemaLog4j">
+        <locationInfo value="true"/>
+      </layout>
+      <!--<layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level@%thread [%logger] [%class].[%method] %message%newline" />
+      </layout>-->
+    </appender>
+    <appender name="ScannerEngineFileAppender" type="log4net.Appender.FileAppender">
+      <file type="log4net.Util.PatternString" value=".\Logs\ScannerEngine-log.xml"/>
+      <appendToFile value="true"/>
+      <layout type="log4net.Layout.XmlLayoutSchemaLog4j">
+        <locationInfo value="true"/>
+      </layout>
+    </appender>
+    <logger name="defaultLogger">
+      <level value="ALL"/>
+      <appender-ref ref="FileAppender"/>
+      <appender-ref ref="ConsoleAppender"/>
+    </logger>
+    <logger name="scannerEngineLogger">
+      <level value="ALL"/>
+      <appender-ref ref="ScannerEngineFileAppender"/>
+      <appender-ref ref="ConsoleAppender"/>
+    </logger>
+
+  </log4net>
+
+  <system.diagnostics>
+    <trace autoflush="true">
+      <listeners>
+        <add name="textWriterTraceListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\temp\log4net.txt"/>
+      </listeners>
+    </trace>
+  </system.diagnostics>
+  <appSettings>
+    <add key="log4net.Internal.Debug" value="true"/>
+  </appSettings>
+  <applicationSettings>
+    <CvLocate.CvFilesScanner.Properties.Settings>
+      <setting name="CvFilesDirectory" serializeAs="String">
+        <value>D:\temp5\Scanner\NewFiles</value>
+      </setting>
+      <setting name="ArchiveDirectoryForFailedScanFiles" serializeAs="String">
+        <value>D:\temp5\Scanner\FailedScanFiles</value>
+      </setting>
+      <setting name="ArchiveDirectoryForFailedUploadFiles" serializeAs="String">
+        <value>D:\temp5\Scanner\FailedUploadFiles</value>
+      </setting>
+      <setting name="ArchiveDirectoryForUnsafeFiles" serializeAs="String">
+        <value >D:\temp5\Scanner\UnsafeFiles</value>
+      </setting>
+      <setting name="ArchiveDirectoryForFailedDeletedFiles" serializeAs="String">
+        <value >D:\temp5\Scanner\FailedDeletedFiles</value>
+      </setting>
+    </CvLocate.CvFilesScanner.Properties.Settings>
+  </applicationSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="WindowsBase" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
