--- a/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner/Properties/Settings.settings
+++ b/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner/Properties/Settings.settings
@@ -5,5 +5,17 @@
     <Setting Name="CvFilesDirectory" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ArchiveDirectoryForFailedScanFiles" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ArchiveDirectoryForFailedUploadFiles" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ArchiveDirectoryForUnsafeFiles" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ArchiveDirectoryForFailedDeletedFiles" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
