--- a/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner/app.config
+++ b/CvLocateSourceCode/CvFilesScanner/CvLocate.CvFilesScanner/app.config
@@ -1,15 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="CvLocate.CvFilesScanner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <applicationSettings>
-        <CvLocate.CvFilesScanner.Properties.Settings>
-            <setting name="CvFilesDirectory" serializeAs="String">
-                <value />
-            </setting>
-        </CvLocate.CvFilesScanner.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="CvLocate.CvFilesScanner.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <CvLocate.CvFilesScanner.Properties.Settings>
+      <setting name="CvFilesDirectory" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ArchiveDirectoryForFailedScanFiles" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ArchiveDirectoryForFailedUploadFiles" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ArchiveDirectoryForUnsafeFiles" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ArchiveDirectoryForFailedDeletedFiles" serializeAs="String">
+        <value />
+      </setting>
+    </CvLocate.CvFilesScanner.Properties.Settings>
+  </applicationSettings>
 </configuration>
